# srm

./: .gitignore  README.md
eval/: ARCHITECTURE.md  pyproject.toml
eval/scripts/: run_ttsds.py
eval/srm_eval/: __init__.py  cli.py  correlate.py  distance.py  run.py  ttsds_runner.py
eval/srm_eval/data/: blizzard.py
eval/srm_eval/extractors/: base.py  wespeaker.py  whisper.py
eval/tests/: test_blizzard_parser.py  test_distance.py
tpu/: .gitignore  ARCHITECTURE.md  pyproject.toml  srm-tpu.yaml
tpu/scripts/: bootstrap.sh
tpu/srm_tpu/: __init__.py  bootstrap.py  cli.py  daemon.py  gcloud.py  inventory.py  io.py  log.py  pools.py  preempt.py  provision.py  retry.py  secrets.py
